tests/sema/fail/v36_fail_compound_shift_count_type.ep
# COMPILE_FAIL_CONTAINS: compound assignment >> shift count expected i64, got u64
fun main(): void {
    let value: u64 = u64(8)
    value >>= u64(1)
}
